# diffusion-autoresearch

./: .env.example  .gitignore  EXPERIMENTS.md  PLAN.md  README.md  SSL_ABLATION.md  autoresearch.md  autoresearch.sh  backbone.py  diffusionsat.py  linear-probing.py  model-details.ipynb  prepare.py  program.md  pyproject.toml  results.tsv  results_early_stopping.tsv  results_full.tsv  run_experiments.sh  ssl4eos12_dataset.py  st2.py  train-auto-sup.py  train-auto.py  train-self.py  train-ssl-ssl4eo-infonce.py  train-ssl.py  train-st2.py  train-supervised.py  train.py  visloc.py
.claude/: settings.json
docs/: diffusionsat-zeroshot.md  dinov3-self-supervised-fine-tuning-visloc.md  dinov3-self-supervised-fine-tuning.md  dinov3-self-supervised-ft-ssl4eos12.md  dinov3-ssl-ablation-study.md  dinov3-supervised-fine-tuning.md  dinov3-two-stage-fine-tuning-ssl4eos12.md  dinov3-two-stage-fine-tuning-visloc.md  dinov3-two-stage-fine-tuning.md  stable-diffusion-zeroshot.md
src/: losses.py  utils.py
