[project]
name = "diffusion-autoresearch"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==2.3.1",
    "torchvision==0.18.1",
    "numpy>=1.26.3,<2",
    "pillow>=12.1.1",
    "rasterio>=1.4.4",
    "pandas>=2.3.3",
    "tqdm>=4.67.3",
    "matplotlib>=3.10.0",
    "scikit-learn>=1.5.0",
    "transformers==4.56.0",
    "huggingface-hub==0.34.4",
    "accelerate==0.34.2",
    "lightning>=2.2.0",
    "wandb>=0.17.0",
    "pytorch-metric-learning>=2.9.0",
    "ipykernel>=7.2.0",
    "peft>=0.19.1",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu121" }]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
